New ReadMe file
With description about the project

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-BubiRacun is a project aimed for small bussines and self employed persons that would like to trace their income and outcome. It is released under GPL v3. It's source is available on GitHub (where you got the ReadMe file). The project is using Qt framework and can be build on all systems supported by Qt framework. It has been tested on Linux (Fedora 16) and Windows (XP, Vista, Windows 7). 
-BubiRacun is still under heavy work and a stable version is not to be expected until middle of 2012. Currently it is aimed for one specific firm, in the beta stage it will be more custumizable.
+Rubicun is a project aimed for small business and self employed persons that would like to trace their income and outcome. It is released under GPL v3. It's source is available on Git Hub (where you got the Read Me file). The project is using Qt framework and can be build on all systems supported by Qt framework. It has been tested on Linux (Fedora 16) and Windows (XP, Vista, Windows 7). 
+Rubicun is still under heavy work and a stable version is not to be expected until middle of 2012. Currently it is aimed for one specific firm, in the beta stage it will be more flexible.
 Please be patient. :)
