TISKANJE UPOŠTEVA NASTAVLJENE VREDNOSTI, DUPLEX
Omogočeno je tiskanje v načinu "duplex" (dvostransko). Možnosti so
naslednje:
- DA: tiska se dvostransko, prek dolge stranice strani,
- NE: tiska se enostransko,
- PRAZNO: upoštevajo se privzete nastavitve tiskalnika.
NI ZNANO, KAJ SE ZGODI, ČE TISKALNIK DUPLEX TISKANJA NE OMOGOČA!

Do sedaj je program pri tisku očitno ignoriral nastavitve v nastavitvenem
oknu tiskanja. Pri zadnjih posodobitvah programa je očitno prišlo do neke
spremembe, zaradi katere je program te nastavitve pričel upoštevati. Do
kakšnih sprememb je prišlo, ni znano. Vsekakor pa privzete nastavitve niso
bile več ustrezne.
Težavo smo rešili tako, da smo postavili nove privzete vrednosti za tisk
potnih nalogov in za tisk računov. Uredili smo možnost ročnega prehoda med
različnimi možnostmi ter avtomatski prehod na ustrezno privzeto vrednost
glede na sam predmet tiskanja.

closes #167

--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,12 @@
 ﻿Kaj je novega?
 ==========
 
+0.9.35
+----------
+- napaka: privzete nastavitve tiskanaj niso enake tisti, ki so bile do sedaj vgrajene v program, zato so bili rezultati tiskanja drugačni od dosedanjih
+- izboljšava: dodana možnost tiskanja v dvostranskem načinu
+- izboljšava: prehodi med različnimi privzetimi vrednostmi tiskanja
+
 0.9.34
 ----------
 - napaka: dodana poštna številka in pošta pri prejemniku in predlagatelja poštnega naloga
