LOGOTIP JE SHRANJEN V BAZI
Logotip se shrani v bazi kot zaporedje znakov.

Tisk računov uporablja logotip iz baze in ne iz datoteke.

Baza je posodobljena. Na začetku vpraša po izbranem logotipu, ki ga
shrani v bazo pri podjetju in pri računih.

#170

--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,11 @@
 ﻿Kaj je novega?
 ==========
 
+0.9.36
+----------
+- izboljšava: logotip se shrani v bazo podatkov
+- izboljšava: tisk logotip kliče iz baze
+
 0.9.35
 ----------
 - napaka: privzete nastavitve tiskanaj niso enake tisti, ki so bile do sedaj vgrajene v program, zato so bili rezultati tiskanja drugačni od dosedanjih
