POTRDITEV PREDRAČUNA SPREMENI STATUS PROJEKTA NA V DELU
Ko je predračun plačan, spremenimo status predračuna na "Potrjen". Hkrati
se tvori račun in spremeni status projekta na "V delu". Posledično se
stranka in projekt prikažeta v seznamu strank na osnovni strani.

closes #169

--- a/news.txt
+++ b/news.txt
@@ -11,6 +11,8 @@
 - izboljšava: uporabnik lahko kreira novo bazo podatkov
 - izboljšava: pri vnosu baze podatkov se šifranti ne brišejo več
 - izboljšava: pri odpiranju program ne spremlja več vseh tabel, ampak samo še novosti
+- izboljšava: na osnovnem prikazu stranke prikaže projekt v teku skupaj z datumom predvidenega zaključka projekta
+- izboljšava: ko je predračun potrjen, se spremeni status projekta na "V delu", stranka in projekt se pojavita na osnovnem prikazu strank
 
 0.9.35
 ----------
