POPRAVKI V BESEDILU RAČUNOV
Dodane so besedne zveze v povezavi z Matično številko podjetja, ki se
bo izpisala na računu.

#182

--- a/news.txt
+++ b/news.txt
@@ -1,5 +1,8 @@
 ﻿Kaj je novega?
 ==========
+0.9.37
+----------
+- izboljšava: v nogo natisnemo matično številko podjetja (zakonodajna zahteva)
 
 0.9.36
 ----------
